force-app/main/default/objects/OAuth_Event_Archive__c/OAuth_Event_Archive__c.object-meta.xml
<CustomObject>
    <label>OAuth Event Archive</label>
    <nameField>
        <displayFormat>OAUTH-{0000000000}</displayFormat>
        <label>OAuth Event Archive Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>OAuth Event Archives</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>