force-app/main/default/objects/OAuth_Event_Archive__c/fields/Connected_App_Id__c.field-meta.xml
<CustomField>
    <fullName>Connected_App_Id__c</fullName>
    <label>Connected App ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>