force-app/main/default/objects/OAuth_Event_Archive__c/fields/Connected_App_Name__c.field-meta.xml
<CustomField>
    <fullName>Connected_App_Name__c</fullName>
    <label>Connected App Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>