force-app/main/default/objects/OAuth_Event_Archive__c/fields/Grant_Type__c.field-meta.xml
<CustomField>
    <fullName>Grant_Type__c</fullName>
    <label>Grant Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>authorization_code</fullName>
            </value>
            <value>
                <fullName>refresh_token</fullName>
            </value>
            <value>
                <fullName>client_credentials</fullName>
            </value>
            <value>
                <fullName>password</fullName>
            </value>
            <value>
                <fullName>implicit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>