force-app/main/default/objects/OAuth_Event_Archive__c/fields/Session_Level__c.field-meta.xml
<CustomField>
    <fullName>Session_Level__c</fullName>
    <label>Session Level</label>
    <length>50</length>
    <type>Text</type>
</CustomField>