force-app/main/default/objects/OAuth_Event_Archive__c/fields/Token_Type__c.field-meta.xml
<CustomField>
    <fullName>Token_Type__c</fullName>
    <label>Token Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>access_token</fullName>
            </value>
            <value>
                <fullName>refresh_token</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>